# components

./: .gitignore
sources/: .gitignore  CMakeLists.txt  env.cmake
sources/libcallbacks/: .gitignore  CMakeLists.txt  CMakePresets.json  env.cmake
sources/libcallbacks/cmake/: callbacks-config.cmake.in  utils.cmake
sources/libcallbacks/examples/add/: CMakeLists.txt  env.cmake  main.cpp
sources/libcallbacks/include/callbacks/: export.h
sources/libcallbacks/installed/include/callbacks/: export_shared.h  export_static.h
sources/libcallbacks/installed/lib/: callbacks.lib
sources/libcallbacks/src/models/: callbacksubscriptionfactory.cpp  valuecallbacks.cpp
sources/libcallbacks/tests/: CMakeLists.txt  add_test.cpp
sources/libdevice/: .gitignore  CMakeLists.txt  build-linux.cmake  build-win.cmake  build.sh  enums.h  libdevice.pc.in  macros.h  main.cpp
sources/libdevice/devices/: command.cpp  command.h  device.cpp  device.h  deviceattribute.cpp  deviceattribute.h  property.cpp  property.h
sources/libdevice/devices/modbus/: modbuscommand.cpp  modbuscommand.h  modbuscommandkit.cpp  modbuscommandkit.h  modbusdevice.cpp  modbusdevice.h  modbusproperty.cpp  modbusproperty.h
sources/libdevice/examples/common/: commonservices.h
sources/libdevice/examples/epss-device/: main.cpp
sources/libdevice/examples/epss-device/src/: consts.h  epsscommands.cpp  epsscommands.h  epssdevice.cpp  epssdevice.h  epssenums.h  epssproperties.cpp  epssproperties.h
sources/libdevice/libdeviced/include/device/: device.h  enumconverter.h  property.h
sources/libdevice/managers/: deviceconfig.cpp  deviceconfig.h  deviceserver.cpp  deviceserver.h
sources/libdevice/services/: enumconverter.cpp
sources/libdevice/test/: TestDevice.cpp  TestDevice.h
sources/libmodbus/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-linux.cmake  build-win.cmake  build.sh  env.cmake  main.cpp  modbus.cpp  modbus.h  tcp_socket.h
sources/libmodbus/cmake/: modbus-config.cmake.in  utils.cmake
sources/libmodbus/example/: main.cpp
sources/libmodbus/export/: libmodbus_Export.h
sources/libmodbus/include/modbus/: tcp_socket.h
sources/libmodbus/installed/lib/: modbus.lib
sources/libmodbus/src/modbus/: modbus.cpp
sources/libmodbus/tests/: CMakeLists.txt  modbus_client_test.cpp  modbus_client_test_samples.cpp  modbus_client_test_samples.h
sources/libmodbustcp/: CMakeLists.txt
sources/libmodbustcp/creators/: requestbufferbuilder.cpp  requestbufferbuilder.h  requestcreator.cpp  requestcreator.h
sources/libmodbustcp/example/: main.cpp
sources/libmodbustcp/managers/: modbusclient.cpp  modbusclient.h  modbustcpclient.cpp  modbustcpclient.h  requestmanager.cpp  requestmanager.h
sources/libmodbustcp/services/: communicator.h  tcpcommunicator.cpp  tcpcommunicator.h
sources/libmodbustcp/services/requests/: readholdingregistersrequest.cpp  readholdingregistersrequest.h  readinputregistersrequest.cpp  readinputregistersrequest.h  request.cpp  request.h  writeholdingregistersrequest.cpp  writeholdingregistersrequest.h
sources/libmodbustcp/services/responses/: parser.h  responseparser.cpp  responseparser.h
sources/libmodbuswrapper/: .gitignore  CMakeLists.txt  CMakePresets.json  env-linux.cmake  env.cmake
sources/libmodbuswrapper/cmake/: modbuswrappers-config.cmake.in
sources/libmodbuswrapper/examples/: CMakeLists.txt  env.cmake  main.cpp
sources/libmodbuswrapper/include/modbuswrappers/: modbuswrapper.h
sources/libmodbuswrapper/include/modbuswrappers/factories/: fullmodbuswrapperfactoryimpl1.h  fullmodbuswrapperfactorymock1.h
sources/libmodbuswrapper/include/modbuswrappers/mocks/: modbuswrappermock1.h  modbuswrappermock2.h
sources/libmodbuswrapper/include/modbuswrappers/modbusasyncclientwrapper/: modbusasyncclientwrapper.h  modbusasyncclientwrapper2.h
sources/libmodbuswrapper/include/modbuswrappers/modbusclientwrapper/: modbusclientdividablewrapper.h  modbusclientwrapper.h  modbusclientwrapperconnectedstate.h  modbusclientwrapperdisconnectedstate.h
sources/libmodbuswrapper/include/modbuswrappers/modbuspostponedwritewrapper/: modbuspostponedwritewrapper.h
sources/libmodbuswrapper/include/modbuswrappers/modbuswrappermodbusiddecorator/: modbusclientmodbusiddecorator.h
sources/libmodbuswrapper/include/modbuswrappers/tangoclientwrappers/: modbustangoclientwrapperimpl1.h
sources/libmodbuswrapper/installed/include/modbuswrappers/: export_static.h
sources/libmodbuswrapper/installed/lib/: modbuswrappers.lib
sources/libmodbuswrapper/src/modbuswrappers/: modbuswrapper.cpp
sources/libmodbuswrapper/src/modbuswrappers/factories/: fullmodbuswrapperfactoryimpl1.cpp  fullmodbuswrapperfactorymock1.cpp
sources/libplugin/: .gitignore  CMakeLists.txt  CMakePresets.json  env.cmake
sources/libplugin/cmake/: plugin-config.cmake.in  utils.cmake
sources/libplugin/examples/: CMakeLists.txt  env.cmake
sources/libplugin/examples/example-1/: CMakeLists.txt  main.cpp
sources/libplugin/include/plugin/: export.h
sources/libplugin/installed/lib/: plugin.lib
sources/libthreadpooling/: .gitignore  CMakeLists.txt  CMakeLists2.txt  CMakePresets.json  env-linux.cmake  env.cmake
sources/libthreadpooling/cmake/: threadpooling-config.cmake.in  utils.cmake
sources/libthreadpooling/installed/lib/: threadpooling.lib
sources/libwidgets/: CMakeLists.txt  CMakePresets.json  env.cmake
sources/libwidgets/cmake/: mylib-config.cmake.in  utils.cmake  widgets-config.cmake.in
sources/libwidgets/examples/: CMakeLists.txt  env.cmake
sources/libwidgets/examples/example-1/: CMakeLists.txt  main.cpp
sources/libwidgets/include/widgets/: export.h
sources/utilsd/: .gitignore  CMakeLists.txt  CMakePresets.json  env-linux.cmake  env.cmake
sources/utilsd/cmake/: utils-config.cmake.in  utils.cmake
sources/utilsd/examples/: CMakeLists.txt  env.cmake
sources/utilsd/examples/example-1/: CMakeLists.txt  env.cmake  main.cpp
sources/utilsd/include/utils/: baseutils.h  modbusutils.h
sources/utilsd/installed/lib/: utils.lib
sources/utilsd/utils/: baseutils.h  enumconverter.h
(+173 files in other folders)
